# fastapi_to_openapi

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_to_openapi/: main.py
tests/: fastapi.py  openapi.json  openapi.yaml  test_main.py
